updated button thing

--- a/Weird-Reddit/assets/css/wise.css
+++ b/Weird-Reddit/assets/css/wise.css
@@ -155,11 +155,11 @@ hr {
     -moz-border-radius: 60px;
     border-radius: 60px;
     color: #ffffff;
-    background: transparent;
+    background: rgba(0,0,0,.5);
     font-size: 20px;
     font-weight: 900;
     padding: 13px 15px 13px 15px;
-    border: solid #ffffff 6px;
+    border: solid #000000 6px;
     text-decoration: none;
     pointer-events: none;
     cursor: default;
@@ -168,7 +168,12 @@ hr {
     -moz-transition: .5s;
     -webkit-transition: .5s;
     transition: .5s;
-    opacity: .7;
+    opacity: .5;
+}
+
+.btnoff img {
+  opacity: .5;
+
 }
 
 .btnon {
